# yast-dhcp-server

./: .cvsignore  .gitignore  .travis.yml  Dockerfile  MAINTAINER  README.md  RPMNAME  Rakefile  yast2-dhcp-server.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am  ag_dhcpd_conf  cfg_dhcpd.scr
dhcp-server/: .cvsignore
dhcp-server/agents/: ag_dhcpd_conf  cfg_dhcpd.scr
dhcp-server/src/: dhcp-server.desktop  dhcp-server_auto.ycp  options.ycp
dhcp-server/testsuite/tests/: Read.out  Read.ycp  Write.out  Write.ycp  YaPIDeleteDeclartion.out  YaPIGetDeclarationOptions.ycp  YaPIGetDeclarationParent.out  YaPISetDeclarationDirectives.out  YaPISetDeclarationDirectives.ycp  YaPISetDeclarationOptions.ycp  YaPISetDeclarationParent.ycp  YaPIStartStopDhcpService.ycp
doc/: func_descr
package/: yast2-dhcp-server.changes  yast2-dhcp-server.spec
src/: DHCPD.pm  DhcpServer.pm  DhcpServer.ycp  DhcpServerUI.ycp  DhcpTsigKeys.pm  Makefile.am  commandline.ycp  dhcp-server.desktop  dhcp-server.y2cc  dhcp-server.ycp  dhcp-server_auto.ycp  dialogs.ycp  dialogs2.ycp  dns-helps.ycp  dns-server-dialogs.ycp  dns-server-management.ycp  dns-server-wizard.ycp  helps.ycp  options.ycp  routines.ycp  ui.ycp  widgets.ycp  wizards.ycp
src/autoyast-rnc/: dhcp-server.rnc
src/clients/: dhcp-server.rb  dhcp-server_auto.rb
src/desktop/: dhcp-server.desktop  org.openSUSE.YaST.DHCPServer.desktop
src/include/dhcp-server/: commandline.rb  dialogs.rb  dialogs2.rb  dns-helps.rb  dns-helps.ycp  dns-server-dialogs.rb  dns-server-management.rb  dns-server-management.ycp  dns-server-wizard.rb  helps.rb  helps.ycp  misc.rb  misc.ycp  options.rb  routines.rb  routines.ycp  widgets.rb  widgets.ycp  wizards.rb
src/modules/: DhcpServer.pm  DhcpServerUI.rb
src/modules/YaPI/: DHCPD.pm
src/scrconf/: etc_dhcpd_conf.scr
test/: dialog_test.rb  dns_dialog_test.rb  dns_server_dialog_test.rb  test_helper.rb  widgets_test.rb  yapi_dhcpd_test.rb
testsuite/tests/: Read.out  Read.rb  Read.ycp  Summary.out  Summary.ycp  Write.out  Write.rb  Write.ycp  YaPIAddDeclaration.out  YaPIAddDeclaration.rb  YaPIAddDeclaration.ycp  YaPIDeleteDeclartion.out  YaPIDeleteDeclartion.rb  YaPIDeleteDeclartion.ycp  YaPIGetDeclarationChildren.out  YaPIGetDeclarationChildren.rb  YaPIGetDeclarationChildren.ycp  YaPIGetDeclarationDirectives.out  YaPIGetDeclarationDirectives.rb  YaPIGetDeclarationDirectives.ycp  YaPIGetDeclarationOptions.out  YaPIGetDeclarationOptions.rb  YaPIGetDeclarationOptions.ycp  YaPIGetDeclarationParent.out  YaPIGetDeclarationParent.rb  YaPIGetDeclarationParent.ycp  YaPISetDeclarationDirectives.out  YaPISetDeclarationDirectives.rb  YaPISetDeclarationDirectives.ycp  YaPISetDeclarationOptions.out  YaPISetDeclarationOptions.rb  YaPISetDeclarationOptions.ycp  YaPISetDeclarationParent.out  YaPISetDeclarationParent.rb  YaPISetDeclarationParent.ycp  YaPIStartStopDhcpService.out  YaPIStartStopDhcpService.rb  YaPIStartStopDhcpService.ycp  rw.out  rw.ycp
